# financial-backend-services

./: .gitignore  .pre-commit-config.yaml  .yamllint.yml  ACCOUNT-SERVICE-CHECKPOINT-REPORT.md  ACCOUNT-SERVICE-FINAL-CHECKPOINT.md  AGENTS.md  CI-CD-PIPELINE-STATUS.md  COMPREHENSIVE-E2E-TESTING.md  DEVELOPMENT.md  Dockerfile.test-runner  E2E-TESTING-ENVIRONMENT.md  GEMINI.md  PRODUCTION-SETUP.md  README.md  account-service-checkpoint-fixed.ps1  account-service-checkpoint.ps1  architecture-assessment-report.txt  clean-e2e-test.ps1  complete-transaction-test.ps1  comprehensive-e2e-test-corrected.ps1  comprehensive-e2e-test.ps1  comprehensive-endpoint-test.ps1  comprehensive-full-system-e2e-test.ps1  comprehensive-test.ps1  debug-services.ps1  demo-production-deployment.sh  diagnostic-test.ps1  docker-compose-e2e.yml  docker-compose-full-e2e.yml  docker-compose.codex.override.yml  docker-compose.codex.yml  docker-compose.task11.override.yml  docker-compose.yml  e2e-environment.ps1  e2e-environment.sh  endpoint-test-results.md  endpoint-test-working.ps1  final-comprehensive-e2e-test.ps1  final-e2e-test-with-jwt-fix.ps1  pom.xml  (+4 more)
financial-mcp-server/: .env.dev  .env.example  .env.prod  .env.staging  .gitignore  DEPLOYMENT-README.md  DEPLOYMENT-TEST-RESULTS.md  DEPLOYMENT.md  Dockerfile  ERROR_HANDLING_IMPLEMENTATION_SUMMARY.md  HTTP-CLIENTS-IMPLEMENTATION-SUMMARY.md  MONITORING-IMPLEMENTATION-SUMMARY.md  Makefile  OPERATIONS.md  README.md  TASK-12-IMPLEMENTATION-SUMMARY.md  TASK-5-IMPLEMENTATION-SUMMARY.md  TASK-5-VERIFICATION-REPORT.md  TESTING.md  complete-test-results.json  complete-working-test.py  comprehensive-mcp-demo.py  create-test-jwt.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  e2e-test-results.json  focused-working-test.py  init-db.sql  mcp-demo-results.json  pyproject.toml  pytest.ini  requirements.txt  run-e2e-test-with-real-services.py  run-integration-tests.ps1  run-system-validation.ps1  run_tests.py  setup-dev.ps1  setup-dev.sh  (+5 more)
financial-mcp-server/docs/api/: README.md
financial-mcp-server/docs/examples/: integration-examples.md
financial-mcp-server/monitoring/: prometheus.yml
financial-mcp-server/monitoring/grafana/dashboards/: mcp-financial-dashboard.json
financial-mcp-server/scripts/: deploy-dev.ps1  deploy-dev.sh  deploy-prod.sh  deploy-staging.sh  health-check.ps1  health-check.sh  test-deployment-scripts.ps1  validate-config.py
financial-mcp-server/src/: main.py
financial-mcp-server/src/mcp_financial/: __init__.py  server.py
financial-mcp-server/src/mcp_financial/auth/: __init__.py  jwt_handler.py  middleware.py  permissions.py
financial-mcp-server/src/mcp_financial/clients/: __init__.py  account_client.py  base_client.py  transaction_client.py
financial-mcp-server/src/mcp_financial/config/: settings.py
financial-mcp-server/src/mcp_financial/exceptions/: __init__.py  base.py  handlers.py
financial-mcp-server/src/mcp_financial/models/: __init__.py  requests.py  responses.py
financial-mcp-server/src/mcp_financial/plugins/: __init__.py  base_plugin.py  plugin_manager.py  registry.py
financial-mcp-server/src/mcp_financial/protocol/: __init__.py  compliance.py  validation.py  versioning.py
financial-mcp-server/src/mcp_financial/tools/: __init__.py  account_tools.py  enhanced_account_tools.py  monitoring_tools.py  query_tools.py  transaction_tools.py
financial-mcp-server/src/mcp_financial/utils/: __init__.py  alerting.py  error_logging.py  health.py  logging.py  metrics.py  (+1 more)
financial-mcp-server/tests/: __init__.py  conftest.py  test_runner.py
financial-mcp-server/tests/e2e/: test_mcp_protocol_compliance.py
financial-mcp-server/tests/integration/: test_circuit_breaker.py  test_end_to_end_scenarios.py  test_error_scenarios.py  test_jwt_compatibility.py  test_monitoring_integration.py  test_monitoring_tools.py  test_monitoring_tools_simple.py  test_security_validation.py  test_service_clients.py  test_system_validation.py
financial-mcp-server/tests/performance/: test_load_testing.py
financial-mcp-server/tests/unit/: test_account_models.py  test_account_tool_functions.py  test_account_tools.py  test_auth_middleware.py  test_error_handling.py  test_jwt_handler.py  test_monitoring.py  test_permissions.py  test_protocol_compliance.py  test_query_tools.py  test_server.py  test_transaction_models.py  test_transaction_tools.py  test_transaction_tools_simple.py  test_validation.py
(+734 files in other folders)
